# distributed-training

./: .gitignore  CMakeLists.txt  README.md  TODO.md  api_spec.md
server/: server.cpp
static/: app.js  index.html  model_config.json  style.css  tokenizer.js  train_config.json  trainer_worker.js
